--- a/application/package.json
+++ b/application/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "builddb": "node ./bin/dbloader",
-    "grade": "npm i && node ./bin/dbloader  && nodemon ./bin/www"
+    "grade": "npm i && node ./bin/dbloader  && nodemon ./bin/www",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -25,6 +28,10 @@
     "sharp": "^0.31.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
+    "nodemon": "^2.0.9",
+    "prettier": "^3.3.3"
   }
 }
